objects/FieloEE__Email__c.object
<CustomObject>
    <description>Object used for sending emails during the first step of registration. This is a Fielo’s internal object.</description>
    <fields>
        <fullName>FieloEE__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Email__c</fullName>
        <description>The email account used for sending emails to the members in the first step of registration.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FieloEE__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FieloEE__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recommend</fullName>
                    <default>true</default>
                    <label>Recommend</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Email</label>
    <nameField>
        <displayFormat>EMAIL-{0000}</displayFormat>
        <label>Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>